--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           <img id="w-icon" />
           <ul class="list-group mt-3" id="w-details">
             <li class="list-group-item" id="w-humidity"></li>
-            <li class="list-group-item" id="w-dewpoint"></li>
-            <li class="list-group-item" id="w-feels-like"></li>
+            <li class="list-group-item" id="w-clouds"></li>
+            <li class="list-group-item" id="w-tempMax"></li>
             <li class="list-group-item" id="w-wind"></li>
           </ul>
           <hr />
@@ -28,7 +28,7 @@
             data-toggle="modal"
             data-target="#locModal"
           >
-            Mudar cidade
+            Change city
           </button>
         </div>
       </div>
@@ -46,7 +46,7 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="locModalLabel">Escolha a cidade</h5>
+            <h5 class="modal-title" id="locModalLabel">Type a city</h5>
             <button
               type="button"
               class="close"
@@ -59,12 +59,12 @@
           <div class="modal-body">
             <form id="w-form">
                 <div class="form-group">
-                    <label for="city">Cidade</label>
+                    <label for="city">City</label>
                     <input type="text" id="city" class="form-control">
                 </div>
                 <div class="form-group">
-                    <label for="state">Estado</label>
-                    <input type="text" id="state" class="form-control">
+                    <label for="state">Country</label>
+                    <input type="text" id="country" class="form-control">
                 </div>
             </form>
           </div>
@@ -76,7 +76,7 @@
             >
               Close
             </button>
-            <button type="button" class="btn btn-primary" id="w-change-btn">Salvar ciadade</button>
+            <button type="button" class="btn btn-primary" id="w-change-btn">Save city</button>
           </div>
         </div>
       </div>
